--- a/decorater.ipynb
+++ b/decorater.ipynb
@@ -98,19 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3ad0bbbf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 14\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDarshan\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     13\u001b[0m obj\u001b[38;5;241m=\u001b[39mwho\n\u001b[1;32m---> 14\u001b[0m obj()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The current user: Darshan\n"
      ]
     }
    ],
@@ -127,8 +123,7 @@
     "    print(\"Darshan\")\n",
     "\n",
     "\n",
-    "obj=who\n",
-    "obj()\n",
+    "who()\n",
     "\n",
     "\n",
     "\n"
@@ -136,8 +131,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "9ddb9b7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 10 is 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum1(func):\n",
+    "    def inner(a,b):\n",
+    "        print(str(a) + \" + \" + str(b) + \" is \", end=\"\")\n",
+    "        return func(a,b)\n",
+    "    return inner\n",
+    "@sum1\n",
+    "def sum(a,b):\n",
+    "    summed=a+b\n",
+    "    print(summed)\n",
+    "\n",
+    "sum(10,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061c75bd",
    "metadata": {},
    "outputs": [],
    "source": []
