--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6d607753",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "608763c2",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "tensor(7)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b2383cec",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "05117b69",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "7"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "8489b0b8",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "tensor([7, 1])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "af18d5f5",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "3f8825af",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "torch.Size([2])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "fece17d5",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "        [8, 7]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e61ec6bb",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "5fbafe7c",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "tensor([7, 8])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "26e03815",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "tensor([8, 7])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "8a338e52",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "torch.Size([2, 2])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "acd8ad8f",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "         [7, 8, 9]]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "ec5b8f48",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "3"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "28544f08",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "torch.Size([1, 3, 3])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "ebb3861a",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "        [7, 8, 9]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "d13df15f",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "tensor([1, 2, 3])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,9 +382,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aad5434c",
+   "metadata": {},
+   "source": [
+    "## Random Tensors\n",
+    "Why random Tensors?\n",
+    " \n",
+    "Random Tensors are important because the way many neural networks learn is that they start with tensors full of random numbers and tehn adjust those reandom numbers to better represent the data.represent \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f822c1fe",
+   "metadata": {},
+   "source": [
+    "Start twith random numbers -> look at data-> update random numbers-> look at data -> update the random numbers \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4e806a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2702, 0.5420, 0.0878, 0.2365, 0.9721, 0.4381, 0.1778, 0.6576, 0.8611,\n",
+       "         0.8307],\n",
+       "        [0.6282, 0.6760, 0.6961, 0.7892, 0.8379, 0.8988, 0.3444, 0.1276, 0.5023,\n",
+       "         0.2483],\n",
+       "        [0.7167, 0.9952, 0.8042, 0.9886, 0.7195, 0.6134, 0.4845, 0.1965, 0.5180,\n",
+       "         0.3165],\n",
+       "        [0.8536, 0.8786, 0.3326, 0.4007, 0.3941, 0.0070, 0.1526, 0.1608, 0.1020,\n",
+       "         0.2346],\n",
+       "        [0.8891, 0.3786, 0.0421, 0.1350, 0.3389, 0.1397, 0.2063, 0.8215, 0.3552,\n",
+       "         0.1222],\n",
+       "        [0.1810, 0.5205, 0.4400, 0.1095, 0.1402, 0.1009, 0.6269, 0.5864, 0.5048,\n",
+       "         0.0355],\n",
+       "        [0.8242, 0.2803, 0.1720, 0.8353, 0.4152, 0.7401, 0.1195, 0.8153, 0.0621,\n",
+       "         0.2849],\n",
+       "        [0.8589, 0.5160, 0.2558, 0.0255, 0.3254, 0.2067, 0.7951, 0.9109, 0.5310,\n",
+       "         0.4168],\n",
+       "        [0.5576, 0.7061, 0.6052, 0.6468, 0.4638, 0.5870, 0.8408, 0.1537, 0.5454,\n",
+       "         0.4441],\n",
+       "        [0.4250, 0.3709, 0.0772, 0.9255, 0.2449, 0.6325, 0.7944, 0.7586, 0.2340,\n",
+       "         0.1667]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a random tensors of size or shape(3,4)\n",
+    "random=torch.rand(3,4)\n",
+    "random \n",
+    "random1=torch.rand(10,10)\n",
+    "random1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c105ca73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.ndim"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa94054",
+   "id": "bfe36dfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f676af2e",
    "metadata": {},
    "outputs": [],
    "source": []
