--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -467,27 +467,779 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "bfe36dfd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1000"
+       "(3, torch.Size([224, 224, 3]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# create a random tensor with similar shape to an image tensor \n",
+    "rando_image_size_tensor=torch.rand(size=(224,224,3))# height,width, Colour Channel  \n",
+    "rando_image_size_tensor.ndim, rando_image_size_tensor.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f676af2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.2541, 0.4244, 0.8912,  ..., 0.7723, 0.6274, 0.1960],\n",
+       "        [0.3685, 0.1737, 0.0275,  ..., 0.0088, 0.4427, 0.2998],\n",
+       "        [0.7206, 0.0934, 0.6225,  ..., 0.1381, 0.4877, 0.6267],\n",
+       "        ...,\n",
+       "        [0.8618, 0.2045, 0.0811,  ..., 0.8007, 0.9933, 0.4072],\n",
+       "        [0.3763, 0.4317, 0.1949,  ..., 0.5288, 0.2665, 0.4237],\n",
+       "        [0.5518, 0.1259, 0.9221,  ..., 0.4492, 0.9708, 0.5292]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Random=torch.rand(224,224)\n",
+    "Random \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2e2ad790",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Random.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2abe9683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([224, 224])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Random.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a1b9d52b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.7412, 0.1971, 0.5661,  ..., 0.5197, 0.1191, 0.6111],\n",
+       "         [0.8078, 0.7571, 0.3273,  ..., 0.5239, 0.8134, 0.2644],\n",
+       "         [0.4480, 0.5001, 0.4895,  ..., 0.9282, 0.3038, 0.9099],\n",
+       "         ...,\n",
+       "         [0.8471, 0.4206, 0.5528,  ..., 0.0783, 0.9704, 0.2264],\n",
+       "         [0.1196, 0.1685, 0.8879,  ..., 0.1125, 0.0830, 0.2379],\n",
+       "         [0.8895, 0.9797, 0.9499,  ..., 0.4405, 0.5753, 0.9534]],\n",
+       "\n",
+       "        [[0.0247, 0.1275, 0.3468,  ..., 0.9181, 0.3832, 0.0363],\n",
+       "         [0.4089, 0.1466, 0.9192,  ..., 0.0361, 0.5675, 0.1596],\n",
+       "         [0.0665, 0.2677, 0.7789,  ..., 0.4084, 0.3134, 0.1500],\n",
+       "         ...,\n",
+       "         [0.8002, 0.1385, 0.7735,  ..., 0.1373, 0.1847, 0.2288],\n",
+       "         [0.7975, 0.2491, 0.7878,  ..., 0.6513, 0.0609, 0.5076],\n",
+       "         [0.8337, 0.6808, 0.2176,  ..., 0.2529, 0.4174, 0.7885]],\n",
+       "\n",
+       "        [[0.5033, 0.1976, 0.8448,  ..., 0.8979, 0.3971, 0.8705],\n",
+       "         [0.8254, 0.1173, 0.8015,  ..., 0.7956, 0.4013, 0.8045],\n",
+       "         [0.2577, 0.0707, 0.0158,  ..., 0.6001, 0.5356, 0.3968],\n",
+       "         ...,\n",
+       "         [0.2601, 0.3262, 0.8939,  ..., 0.1881, 0.1158, 0.0440],\n",
+       "         [0.9941, 0.9882, 0.6081,  ..., 0.2380, 0.7708, 0.3901],\n",
+       "         [0.7489, 0.6047, 0.4267,  ..., 0.6258, 0.4646, 0.3217]]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " torch.rand((3,224,244))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "80a0aa55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0.],\n",
+      "        [0., 0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Zero and Ones\n",
+    "Zero =torch.zeros(3,4)\n",
+    "print(Zero)\n",
+    "# 0 multipled with any tensor is becomes zeros "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bdf033f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a tensors of all ones\n",
+    "ones=torch.ones(3,4)\n",
+    "# it convert all the number into ones\n",
+    "ones"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f676af2e",
+   "id": "37527640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Creating a range of tensors and tensors-like \n",
+    "#use torch.range()\n",
+    "# range as been replaced by arange \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "59fd9bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.arange(0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "20c75ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one=torch.arange(start=0,end=10000,step=100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "7a9de7ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating tensors like \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "494aebfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.zeros_like(one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9430b162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3., 6., 9.])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Tensor  data type \n",
+    "float_32_tensor= torch.tensor ([3.0,6.0,9.0],\n",
+    "                               dtype=None,\n",
+    "                               device=None,# what device is you tensor on \n",
+    "                               requires_grad=False) # whether or  not to track Gradients\n",
+    "float_32_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb343f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Note tensor data type is one of the 3 big errors you will run into PYtorch \n",
+    "## Tensor not right datatype\n",
+    "## Tensor  not right shape\n",
+    "## Tensor  not on the right device \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "17161063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting float 32 into float 16\n",
+    "floar_16_tensor= float_32_tensor.type(torch.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "616e1021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3., 6., 9.], dtype=torch.float16)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "floar_16_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1c60b281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 9., 36., 81.])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor*floar_16_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c2b395a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 8], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# interger \n",
+    "int_32=torch.tensor([3,6,8],dtype=torch.int32)\n",
+    "int_32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "5b5a6d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 9., 36., 72.])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_32*float_32_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a0839126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 8])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_64=torch.tensor([3,6,8],dtype=torch.int64)\n",
+    "int_64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2f6955e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 9., 36., 72.])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_64* float_32_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "810e6c63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([3, 6, 8])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_long=torch.tensor([3,6,8],dtype=torch.long)\n",
+    "int_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "46307cca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 9., 36., 72.])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_32_tensor*int_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e7515c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Getting information from tensor \n",
+    "### Tensor not right datatype -> to do get datatype from a tensor can use tensor.dtype\n",
+    "### Tensor not right shape -> to get shape from a tensor  can use tensor.shape\n",
+    "### Tensor not on the right device-> to get device from a tensor, can use tensor. device \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "e1301c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.9350, 0.9188, 0.2606, 0.4671],\n",
+       "        [0.3095, 0.0054, 0.2358, 0.7831],\n",
+       "        [0.5185, 1.0000, 0.5252, 0.4555]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_tensor =torch.rand(3,4)\n",
+    "some_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "2ac9f304",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.9350, 0.9188, 0.2606, 0.4671],\n",
+      "        [0.3095, 0.0054, 0.2358, 0.7831],\n",
+      "        [0.5185, 1.0000, 0.5252, 0.4555]])\n",
+      "Datatype of tensor:torch.float32\n",
+      "shape of tensor:torch.Size([3, 4])\n",
+      "Devic of tensor:cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(some_tensor)\n",
+    "print(f\"Datatype of tensor:{some_tensor.dtype}\")\n",
+    "print(f\"shape of tensor:{some_tensor.shape}\")\n",
+    "print(f\"Devic of tensor:{some_tensor.device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "0c83aade",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Manipulating Tensor \n",
+    "\n",
+    "# Tensor operation Include\n",
+    "# ADD\n",
+    "# sub\n",
+    "# Multiplicatio\n",
+    "# Division\n",
+    "# Matrix Multiplication\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "a6fafe55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([101, 102, 103])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### create a tensor \n",
+    "tensor =torch.tensor([1,2,3])\n",
+    "tensor + 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "f3bfba13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([10, 20, 30])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8c369382",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-9, -8, -7])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor-10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "35212190",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 4, 9])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor * tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "96a0be45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 1., 1.])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor/tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "649894bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([10, 20, 30])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Try out pytroch in-built function \n",
+    "torch.mul(tensor,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "8c9baea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([11, 12, 13])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.add(tensor,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "12dc8515",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 1., 1.])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.div(tensor,tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "aa27948c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-9, -8, -7])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sub(tensor,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0014ae05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Matrix multiplication \n",
+    "## Two main ways of performing multiplication in neural and DL\n",
+    "## 1. Element wise Multiplication\n",
+    "## 2. Matrix Multiplication "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f55fc2ba",
    "metadata": {},
    "outputs": [],
    "source": []
