--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -1233,7 +1233,8 @@
     "### Matrix multiplication \n",
     "## Two main ways of performing multiplication in neural and DL\n",
     "## 1. Element wise Multiplication\n",
-    "## 2. Matrix Multiplication "
+    "## 2. Matrix Multiplication (dot Product) . _>\n",
+    "###"
    ]
   },
   {
