--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -1460,6 +1460,50 @@
    "execution_count": null,
    "id": "4eeefcd2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finding the position of min  and max\n",
+    "z.argmin() # -> return min val back from the matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "2786c991",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the position  in tensor that has the maximum value with argmax()\n",
+    "z.argmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d55e070",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
