--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -1501,8 +1501,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "8d55e070",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Reshpaing Stacking  and Squeezing \n",
+    "\n",
+    "# * Reshaping reshapes an input tensor to a defined shape\n",
+    "# View - return of an input  tensor of certainn shape but keep the same memory as orginial tensor \n",
+    "# stack ->  Combine multiple tensors on top of each other(vstack) or side by side(hstack)\n",
+    "# Squeeze- remove all '1'  dimension  from a tensor \n",
+    "# * Unsequee add a '1' dimension to a target tensor \n",
+    "## Permute Return a view of the input with dimension permuted \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "14c230ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 2., 3., 4., 5., 6., 7., 8., 9.]), torch.Size([9]))"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's create a tensor \n",
+    "import torch\n",
+    "z=torch.arange(1.,10.)\n",
+    "z,z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "7b162a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1.],\n",
+       "         [2.],\n",
+       "         [3.],\n",
+       "         [4.],\n",
+       "         [5.],\n",
+       "         [6.],\n",
+       "         [7.],\n",
+       "         [8.],\n",
+       "         [9.]]),\n",
+       " torch.Size([9, 1]))"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_reshape=z.reshape(9,1)\n",
+    "z_reshape,z_reshape.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "e546d5b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1., 2., 3., 4., 5., 6., 7., 8., 9.]]), torch.Size([1, 9]))"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#change the view \n",
+    "x=z.view(1,9)\n",
+    "x,x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "ba52542e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# changinf z change z (because a view of  a tensor share the same memory as the original )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "da8742a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1.],\n",
+       "        [2., 2., 2., 2.],\n",
+       "        [3., 3., 3., 3.],\n",
+       "        [4., 4., 4., 4.],\n",
+       "        [5., 5., 5., 5.],\n",
+       "        [6., 6., 6., 6.],\n",
+       "        [7., 7., 7., 7.],\n",
+       "        [8., 8., 8., 8.],\n",
+       "        [9., 9., 9., 9.]])"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# stack tensor on top of each other \n",
+    "x_stacked=torch.stack([z,z,z,z],dim=1)\n",
+    "x_stacked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f13a6ba3",
    "metadata": {},
    "outputs": [],
    "source": []
